fix bug on anthor tags not directing to the correct section of the page on mobile view

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -162,3 +162,8 @@
 .highlight-class {
   color: #ff6b6b;
 }
+
+.about-section {
+  padding-top: 150px;
+  margin-top: -100px;
+}
